# nvim_plantuml_renderer

./: .gitignore  LICENSE  README.md  pyproject.toml
src/nvim_plantuml_renderer/: __init__.py  app.py  image.py  monitor.py  save_image.py
